refactor(redesign): redesign musics page

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -21,5 +21,20 @@
             "title": "App Theme"
         }
     },
-    "delete": "Delete"
+    "pageTitle": {
+        "home": "Home",
+        "search": "Search",
+        "settings": "Settings",
+        "musics": "Musics",
+        "artists": "Artists",
+        "albums": "Albums"
+    },
+    "delete": "Delete",
+    "tableColumn": {
+        "music": {
+            "title": "Title",
+            "artist": "Artist",
+            "album": "Album"
+        }
+    }
 }
