--- a/locales/ko/translation.json
+++ b/locales/ko/translation.json
@@ -41,5 +41,7 @@
     "playAll": "모두 재생",
     "shuffleAll": "무작위 재생",
     "trackCount_one": "{{count}}개의 곡",
-    "trackCount_other": "{{count}}개의 곡"
+    "trackCount_other": "{{count}}개의 곡",
+    "albumCount_one": "{{count}}개의 앨범",
+    "albumCount_other": "{{count}}개의 앨범"
 }
