refactor(i18n): add translations for app theme values

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -19,7 +19,10 @@
             "description": "Force to refresh the library by scanning the library directories for new music."
         },
         "appTheme": {
-            "title": "App Theme"
+            "title": "App Theme",
+            "light": "Light",
+            "dark": "Dark",
+            "system": "Use System Theme"
         },
         "language": {
             "title": "Language"
