--- a/locales/ko/translation.json
+++ b/locales/ko/translation.json
@@ -19,7 +19,10 @@
             "description": "라이브러리 위치에서 모든 미디어가 표시되지 않는 경우 지금 라이브러리를 다시 인덱싱할 수 있습니다."
         },
         "appTheme": {
-            "title": "앱 테마"
+            "title": "앱 테마",
+            "light": "밝게",
+            "dark": "어둡게",
+            "system": "시스템 설정 사용"
         },
         "language": {
             "title": "언어"
