refactor(library): prevent side menu playlist ui flickering

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -58,5 +58,6 @@
     "albumCount_other": "{{count}} Albums",
     "clear_all": "Clear All",
     "addToPlaylist": "Add To",
+    "emptyPlaylist": "Playlist is empty",
     "rename": "Rename"
 }
