--- a/locales/ko/translation.json
+++ b/locales/ko/translation.json
@@ -120,5 +120,7 @@
     "clearAll": "비우기",
     "addToPlaylist": "추가",
     "emptyPlaylist": "재생목록이 비어있습니다.",
-    "rename": "이름 변경"
+    "rename": "이름 변경",
+    "emptySearch": "검색 결과가 없습니다.",
+    "notSearched": "검색어를 입력하세요."
 }
