--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -2,5 +2,15 @@
     "pages": {
         "home": "Home",
         "settings": "Settings"
+    },
+    "settings": {
+        "color-mode": {
+            "title": "Color Mode",
+            "options": {
+                "light": "Light",
+                "dark": "Dark",
+                "system": "Use System Theme"
+            }
+        }
     }
 }
