add language configuration field

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -11,6 +11,9 @@
                 "dark": "Dark",
                 "system": "Use System Theme"
             }
+        },
+        "language": {
+            "title": "Language"
         }
     }
 }
