--- a/locales/ko/translation.json
+++ b/locales/ko/translation.json
@@ -11,6 +11,9 @@
                 "dark": "다크",
                 "system": "시스템 설정 사용"
             }
+        },
+        "language": {
+            "title": "언어"
         }
     }
 }
