--- a/locales/ko/translation.json
+++ b/locales/ko/translation.json
@@ -4,6 +4,17 @@
         "settings": "설정"
     },
     "settings": {
+        "library": {
+            "title": "라이브러리"
+        },
+        "personalization": {
+            "title": "개인화"
+        },
+        "scan-library": {
+            "title": "라이브러리 스캔",
+            "description": "새로운 미디어를 검색하고 라이브러리를 업데이트합니다.",
+            "action": "새로고침"
+        },
         "color-mode": {
             "title": "색상 모드",
             "options": {
