add toast notification for library scanning

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -26,5 +26,12 @@
         "language": {
             "title": "Language"
         }
+    },
+    "toast": {
+        "scan-library": {
+            "success": "Completed scanning the library.",
+            "error": "Failed to scan the library.",
+            "loading": "Scanning the library..."
+        }
     }
 }
