--- a/locales/ko/translation.json
+++ b/locales/ko/translation.json
@@ -26,5 +26,12 @@
         "language": {
             "title": "언어"
         }
+    },
+    "toast": {
+        "scan-library": {
+            "success": "라이브러리 스캔이 완료되었습니다.",
+            "error": "라이브러리 스캔 중 오류가 발생했습니다.",
+            "loading": "라이브러리 스캔 중..."
+        }
     }
 }
