feat(library): add bare implementation of media library (#12)

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -4,6 +4,17 @@
         "settings": "Settings"
     },
     "settings": {
+        "library": {
+            "title": "Library"
+        },
+        "personalization": {
+            "title": "Personalization"
+        },
+        "scan-library": {
+            "title": "Scan Library",
+            "description": "Scan the library for new media files.",
+            "action": "Refresh"
+        },
         "color-mode": {
             "title": "Color Mode",
             "options": {
@@ -14,6 +25,13 @@
         },
         "language": {
             "title": "Language"
+        }
+    },
+    "toast": {
+        "scan-library": {
+            "success": "Completed scanning the library.",
+            "error": "Failed to scan the library.",
+            "loading": "Scanning the library..."
         }
     }
 }
