implement repeat modes

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -37,6 +37,7 @@
     },
     "common": {
         "library": "Library",
-        "unknown-genre": "Unknown Genre"
+        "unknown-genre": "Unknown Genre",
+        "unknown-album": "Unknown Album"
     }
 }
