--- a/locales/ko/translation.json
+++ b/locales/ko/translation.json
@@ -37,6 +37,7 @@
     },
     "common": {
         "library": "라이브러리",
-        "unknown-genre": "알 수 없는 장르"
+        "unknown-genre": "알 수 없는 장르",
+        "unknown-album": "알 수 없는 앨범"
     }
 }
