--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -37,7 +37,12 @@
     },
     "common": {
         "library": "Library",
+        "playlist": "Playlist",
+        "now-playing": "Now Playing",
         "unknown-genre": "Unknown Genre",
-        "unknown-album": "Unknown Album"
+        "unknown-album": "Unknown Album",
+        "musicWithCount_other": "{{count}} Musics",
+        "musicWithCount_one": "{{count}} Music",
+        "clear": "Clear"
     }
 }
