--- a/locales/ko/translation.json
+++ b/locales/ko/translation.json
@@ -37,7 +37,12 @@
     },
     "common": {
         "library": "라이브러리",
+        "playlist": "재생목록",
+        "now-playing": "재생 대기열",
         "unknown-genre": "알 수 없는 장르",
-        "unknown-album": "알 수 없는 앨범"
+        "unknown-album": "알 수 없는 앨범",
+        "musicWithCount_other": "{{count}}개의 곡",
+        "musicWithCount_one": "{{count}}개의 곡",
+        "clear": "비우기"
     }
 }
