--- a/locales/ko/translation.json
+++ b/locales/ko/translation.json
@@ -47,7 +47,8 @@
         "create": "생성",
         "cancel": "취소",
         "delete": "삭제",
-        "open": "열기"
+        "open": "열기",
+        "add": "추가"
     },
     "playlist": {
         "create": {
@@ -68,6 +69,11 @@
             "pending": "재생목록 삭제 중...",
             "success": "재생목록이 삭제되었습니다.",
             "error": "재생목록 삭제 중 오류가 발생했습니다."
+        },
+        "add-musics": {
+            "pending": "곡 추가 중...",
+            "success": "곡이 재생목록에 추가되었습니다.",
+            "error": "곡 추가 중 오류가 발생했습니다."
         }
     }
 }
