--- a/locales/ko/translation.json
+++ b/locales/ko/translation.json
@@ -74,6 +74,13 @@
             "pending": "곡 추가 중...",
             "success": "곡이 재생목록에 추가되었습니다.",
             "error": "곡 추가 중 오류가 발생했습니다."
+        },
+        "clear": {
+            "title": "재생목록 비우기",
+            "description": "이 재생목록을 비우시겠습니까?",
+            "pending": "재생목록 비우기 중...",
+            "success": "재생목록이 비워졌습니다.",
+            "error": "재생목록 비우기 중 오류가 발생했습니다."
         }
     }
 }
