--- a/locales/ko/translation.json
+++ b/locales/ko/translation.json
@@ -43,6 +43,8 @@
         "unknown-album": "알 수 없는 앨범",
         "musicWithCount_other": "{{count}}개의 곡",
         "musicWithCount_one": "{{count}}개의 곡",
+        "selectedCount_other": "{{count}}개 항목 선택됨",
+        "selectedCount_one": "{{count}}개 항목 선택됨",
         "clear": "비우기",
         "create": "생성",
         "cancel": "취소",
@@ -96,6 +98,11 @@
                 "title-required": "재생목록 이름을 입력하세요.",
                 "title-too-long": "재생목록 이름은 20자를 넘을 수 없습니다."
             }
+        },
+        "delete-items": {
+            "pending": "재생목록 항목 삭제 중...",
+            "success": "재생목록 항목이 삭제되었습니다.",
+            "error": "재생목록 항목 삭제 중 오류가 발생했습니다."
         }
     }
 }
