implement playing selection feature

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -53,6 +53,7 @@
         "add": "Add",
         "rename": "Rename",
         "play-all": "Play All",
+        "play-selected": "Play Selected",
         "shuffle-all": "Shuffle All"
     },
     "playlist": {
